[file-manager] feat: update DeleteFile use case to be DeleteFiles and be a post request
